# project_yolo

./: .gitignore  README.md  app_globals.py  main.py  pyproject.toml  requirements.txt
doc/: design.md  develop.md
routers/: rest_api.py  root.py  websocket.py
static/: script.js  style.css
streamlit/: app.py
templates/: compare.html  index.html  rest_api.html  websocket.html
tracker/: test.py  tracker.py
tracker/models/: coco.yaml
utils/: common.py  select_camera.py  setup_video.py  stream_loader.py  utils.py
